Magick.NET.Native/MagickImage.h



MAGICK_NET_EXPORT Image *MagickImage_AdaptiveSharpen(Image *, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_AdaptiveThreshold(const Image *, const size_t, const size_t, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_AddNoise(Image *, const size_t, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_AddProfile(Image *, const char *, const unsigned char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_AffineTransform(Image *, const double, const double, const double, const double, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Annotate(Image *, const DrawInfo *, char *, char *, const size_t, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_AnnotateGravity(Image *, const DrawInfo *, char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_AutoGamma(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_AutoLevel(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_AutoOrient(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_BlackThreshold(Image *, const char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_BlueShift(const Image *, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Blur(Image *, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Border(const Image *, const RectangleInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_BrightnessContrast(Image *, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_CannyEdge(const Image *, const double, const double, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_ChannelOffset(const Image *, const size_t);


MAGICK_NET_EXPORT Image *MagickImage_Charcoal(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Chop(const Image *, const RectangleInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Clamp(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_ClampChannel(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Clip(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_ClipPath(Image *, const char *, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Clone(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Clut(Image *, Image *, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_ColorDecisionList(Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Colorize(const Image *, const PixelInfo *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_ColorMatrix(const Image *, const KernelInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Compare(Image *, Image *, const size_t, const size_t, double *, ExceptionInfo **);


MAGICK_NET_EXPORT double MagickImage_CompareDistortion(Image *, Image *, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Composite(Image *, const Image *, const ssize_t, const ssize_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_CompositeGeometry(Image *, const Image *, const char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_ConnectedComponents(const Image *, const size_t, CCObjectInfo **, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Contrast(Image *, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_ContrastStretch(Image *, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Convolve(const Image *, const KernelInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_CopyPixels(Image *, const Image *, const RectangleInfo *, const OffsetInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Crop(const Image *, const RectangleInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_CropToTiles(const Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_CycleColormap(Image *, const ssize_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Decipher(Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Deskew(const Image *, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Despeckle(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT const size_t MagickImage_DetermineColorType(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Distort(const Image *, const size_t, const MagickBooleanType, const double *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Edge(const Image *, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Emboss(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Encipher(Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Enhance(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Equalize(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT MagickBooleanType MagickImage_Equals(const Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_EvaluateFunction(Image *, const size_t, const size_t, const double *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_EvaluateGeometry(Image *, const size_t, const RectangleInfo *, const size_t, const double, ExceptionInfo **);